@@ -2,6 +2,8 @@ Changes with mod_fastcgi 2.2.5
 
  *) Fix Win32 named pipe handling (problems with large responses).
 
+ *) (Win32) Remove the "can exec" check.
+
 Changes with mod_fastcgi 2.2.4
 
  *) Beta WinNT support.  David Allen [djallen@raleigh.ibm.com] and 
